--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	function initApp() {
 		// Grab the object handles for our rendering/drawing spaces
 		workSpace     = $("#workspace");
-		//calenderSpace = document.getElementById("workspace2");
+		calenderSpace = $("#workspace2");
 		// delay fetching our data
 		window.setTimeout(delayLoading, preloadDelayTime);
 		workSpace.text("0 events.");
