final update. ready for release.

--- a/about.html
+++ b/about.html
@@ -59,11 +59,9 @@ font-weight:bold;
 <div class=calenderSpace id=workspace2>
 This app was created by Jesus Monroy, Jr. for the Hacker Dojo Community.
 <p>
-This is the 2nd (second) Beta <b><i>ANNOUNCED</i></b>.
+This is the Version 1.0 of this App. It is an unofficial Calander App for the <a style="text-decoration:underline;" href=http://www.hackerdojo.com/>Hacker Dojo</a> in Mountain View, California.
 <p>
-It was created using <a style="text-decoration:underline;" href=http://www.appception.com/>Appception</a>, a Rapid
-Developement Cloud-based IDE for building mobile on
-Apple's iOS&trade; and Google's <span style=color:#A4C639;>Andriod&trade;</span> Apps.
+It was created using <a style="text-decoration:underline;" href=http://build.phonegap.com/>PhoneGap Build</a>, a Cloud-based Compiler for building mobile APPs on Apple's iOS&trade; and Google's <span style=color:#A4C639;>Andriod&trade;</span> Apps.
 <p>
 
 </div>
