update copyright, icon, & menus

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 <CENTER>
 <div class=topSpacer>&nbsp;</div>
 <ul class=menu>
-<li class=menu-item><a href=index.html>Home</a></li>
-<li class=menu-item><a href=about.html>About</a></li>
-<li class=menu-item><a href=feedback.html>Feedback</a></li>
-<li class=menu-item><span onclick='navigator.app.exitApp()'>Exit</span></li>
+<a href=index.html><li class=menu-item>Home</li></a>
+<a href=about.html><li class=menu-item>About</li></a>
+<a href=feedback.html><li class=menu-item>Feedback</li></a>
+<span onclick='navigator.app.exitApp()'><li class=menu-item>Exit</li></span>
 </ul>
 
 <div>
@@ -70,7 +70,7 @@
 </div>
 
 <div style="background:lightblue;">
-Created by<br> jesse at <br>bsdmasterindex.com &#169 2013
+Created by<br> jesse at <br>bsdmasterindex.com &#169 2014
 </div>
 </CENTER>
 
