removed jquery, added zepto and ajaxLite

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	<link rel="stylesheet" type="text/css" href=hdcal.css>
 
     <script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript" src="js/jquery-1.11.0.js"></script>
+    <!-- <script type="text/javascript" src="js/jquery-1.11.0.js"></script> -->
+	<script type="text/javascript" src="js/zepto-1.1.6.js"></script>
     <SCRIPT type="text/javascript" SRC="js/basicGUIWidgets.js"></SCRIPT>
     <SCRIPT type="text/javascript" SRC="js/basicDateFunctions.js"></SCRIPT>
     <SCRIPT type="text/javascript" SRC="js/newGUIWidgets.js"></SCRIPT>
